--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,16 @@
 # JDBC Configuration
-#MySQL
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
+#PostgreSQL
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost/postgres?searchpath=attendance
+jdbc.username=postgres
 jdbc.password=123456
+jdbc.schema=finance
+
+#MySQL
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+#jdbc.username=root
+#jdbc.password=123456
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
