--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,30 @@
     <!-- DB Driver End  -->
 
 
+    <!-- 检测文本文件(字节流)的编码方式   start  -->
+    <dependency>
+      <groupId>cpdetector</groupId>
+      <artifactId>cpdetector</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>jargs</groupId>
+      <artifactId>jargs</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.jchardet</groupId>
+      <artifactId>jchardet</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>antlr</groupId>
+      <artifactId>antlr</artifactId>
+    </dependency>
+    <!-- 检测文本文件(字节流)的编码方式   end  -->
+
+
+
     <!-- 注解  -->
     <dependency>
       <groupId>javax.persistence</groupId>
@@ -186,21 +210,21 @@
     </dependency>
     <!-- 网络爬虫   end  -->
 
-      <!-- JSON Start -->
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-core-asl</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>net.sf.json-lib</groupId>
-        <artifactId>json-lib</artifactId>
-        <classifier>jdk15</classifier>
-      </dependency>
-      <!-- JSON End -->
+    <!-- JSON Start -->
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <classifier>jdk15</classifier>
+    </dependency>
+    <!-- JSON End -->
 
     <dependency>
       <groupId>jfree</groupId>
@@ -213,13 +237,13 @@
       <version>1.2</version>
     </dependency>
 
-    <!--
+
+    <!-- CSV  start  -->
     <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib</artifactId>
-      <version>2.0.2</version>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
     </dependency>
-    -->
+    <!-- CSV  end  -->
 
     <!-- 公式运算  -->
     <dependency>
